# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
advent_of_code_2024.egg-info/: PKG-INFO  SOURCES.txt
day1/: day1.py
day2/: day2.py
day3/: day3.py
util/: aoc_utils.py
